added food prediction

--- a/Food Recognition CoreML/Info.plist
+++ b/Food Recognition CoreML/Info.plist
@@ -41,5 +41,9 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Need Food Picture</string>
+	<key>NSCameraUsageDescription</key>
+	<string>Take Food Picture</string>
 </dict>
 </plist>
